# RekuAI

./: .env  .gitignore  Dockerfile  Jenkinsfile  README.md  application.py  deployment.yaml  pyproject.toml
.dvc/: config
artifacts/: .gitignore  model.dvc  model_checkpoint.dvc  processed.dvc  raw.dvc  weights.dvc
config/: config.yaml  paths_config.py
notebook/: anime.ipynb
pipeline/: prediction_pipeline.py  training_pipeline.py
src/: base_model.py  data_ingestion.py  data_processing.py  model_training.py
static/css/: style.css
templates/: index.html
utils/: common_functions.py  helpers.py
