[project]
name = "anime-hybrid-rs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "google-cloud-storage>=3.1.0",
    "numpy>=1.23.0", # Changed NumPy version
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "setuptools>=80.3.1",
    "requests>=2.31.0", # Added a new dependency
    "tensorflow>=2.19.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "wordcloud>=1.9.4",
    "joblib>=1.5.0",
    "comet-ml>=3.49.9",
    "dotenv>=0.9.9",
    "dvc>=3.59.2",
    "dvc-gs>=3.0.1",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "python-multipart>=0.0.20",
    "jinja2>=3.1.6",
]


[tool.hatch.build.targets.wheel]
packages = ["src/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
